# lyrics-generator

./: .gitignore  README.md  main.py  pyproject.toml
examples/: into_glory_ride.csv  into_glory_ride.txt  settings_2022.json  settings_original.json
src/lyrics_generator/: __init__.py  core.py  generator.py  logger.py  lyric_generator.py  lyrics_data.py  lyrics_reader.py  model.py  output.py  schemas.py  song_lyrics.py  user_input.py  user_output.py  utils.py
tests/: __init__.py  conftest.py  test_core.py  test_io.py  test_lyrics.py  test_output.py  utils.py
tests/settings/: test_settings.json
