[project]
dynamic = ["version"]
name = "lyrics-generator"

[tool.poetry]
description = "Lyrics generator"
authors = ["sagitta42 <mariia.redchuk@gmail.com>"]
readme = "README.md"
packages = [{ include = "lyrics_generator", from = "src" }]
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
pandas = "^3.0.0"
dotenv = "^0.9.9"
scikit-learn = "^1.8.0"
tensorflow = "^2.20.0"
keras = "^3.13.1"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pytest = "^9.0.2"


[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "src" }]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
